--- a/client/index.html
+++ b/client/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="Landing/styles.css">
     <title>EVENT MANAGEMENT</title>
 </head>
 <body>
@@ -65,6 +65,6 @@
             </div>
         </div>
     </div>
- <script src="scrpt.js"></script>   
+ <script src="Landing/scrpt.js"></script>   
 </body>
 </html>
