Add landing styles

--- a/client/index.html
+++ b/client/index.html
@@ -37,31 +37,31 @@
         </div>
         <div class="gallery">
             <div class="item">
-                <img src="Download premium image of Businesswoman writing on a board in the meeting room by Felix about business, planning, presentation, writing, and business meeting 1213752.jpeg" alt="" srcset="">
+                <img src="Landing/Download premium image of Businesswoman writing on a board in the meeting room by Felix about business, planning, presentation, writing, and business meeting 1213752.jpeg" alt="" srcset="">
             </div>
             <div class="item">
-                <img src="AI women in tech.jpeg" alt="" srcset="">
+                <img src="Landing/AI women in tech.jpeg" alt="" srcset="">
             </div>
             <div class="item">
-                <img src="I'm Framing This Photo of Alexandria Ocasio-Cortez and the New Squad of Congresswomen.jpeg" alt="" srcset="">
+                <img src="Landing/I'm Framing This Photo of Alexandria Ocasio-Cortez and the New Squad of Congresswomen.jpeg" alt="" srcset="">
             </div>
             <div class="item">
-                <img src="15 Simple Icebreaker Games for Adults to Connect Your Team.jpeg" alt="" srcset="">
+                <img src="Landing/15 Simple Icebreaker Games for Adults to Connect Your Team.jpeg" alt="" srcset="">
             </div>
             <div class="item">
-                <img src="15 Simple Icebreaker Games for Adults to Connect Your Team.jpeg" alt="" srcset="">
+                <img src="Landing/15 Simple Icebreaker Games for Adults to Connect Your Team.jpeg" alt="" srcset="">
             </div>
             <div class="item">
-                <img src="15 Simple Icebreaker Games for Adults to Connect Your Team.jpeg" alt="" srcset="">
+                <img src="Landing/15 Simple Icebreaker Games for Adults to Connect Your Team.jpeg" alt="" srcset="">
             </div>
             <div class="item">
-                <img src="15 Simple Icebreaker Games for Adults to Connect Your Team.jpeg" alt="" srcset="">
+                <img src="Landing/15 Simple Icebreaker Games for Adults to Connect Your Team.jpeg" alt="" srcset="">
             </div>
             <div class="item">
-                <img src="15 Simple Icebreaker Games for Adults to Connect Your Team.jpeg" alt="" srcset="">
+                <img src="Landing/15 Simple Icebreaker Games for Adults to Connect Your Team.jpeg" alt="" srcset="">
             </div>
             <div class="item">
-                <img src="15 Simple Icebreaker Games for Adults to Connect Your Team.jpeg" alt="" srcset="">
+                <img src="Landing/15 Simple Icebreaker Games for Adults to Connect Your Team.jpeg" alt="" srcset="">
             </div>
         </div>
     </div>
