--- a/client/home/home.html
+++ b/client/home/home.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./css/styles.css">
+    <link rel="stylesheet" href="../home/css/styles.css">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">
     <title>Home</title>
 </head>
@@ -25,5 +25,5 @@
         </div>
     </main>
 </body>
-<script type="module" src="./js/home.js"></script>
+<script type="module" src="../home/js/home.js"></script>
 </html>
