--- a/client/auth/index.html
+++ b/client/auth/index.html
@@ -14,16 +14,16 @@
   
   <section>
     <div class="login-box">
-      <form action="#">
+      <form action="#" id="login-form">
         <h2>Login</h2>
         <div class="input-box">
           <span class="icon"><ion-icon name="mail-outline"></ion-icon></span>
-          <input type="email" required>
+          <input type="email" name="email" required>
           <label>Email</label>
         </div>
         <div class="input-box">
           <span class="icon"><ion-icon name="lock-closed-outline"></ion-icon></span>
-          <input type="password" required>
+          <input type="password" name="password" required>
           <label>Password</label>
         </div>
         <div class="remember-forgot">
