Add auth in landing

--- a/client/index.html
+++ b/client/index.html
@@ -19,7 +19,7 @@
           
         </div>
         <div class="header-right">
-            <a href="#" class="signup">Sign up</a>
+            <a href="/auth" class="signup">Sign up</a>
             <a href="#" class="icon-light" onclick="toggleLightDark();"><i class="bi bi-sun-fill"></i></a>
             <a href="#" class="icon-dark" onclick="toggleLightDark();"><i class="bi bi-moon-fill"></i></a>
         </div>
@@ -31,7 +31,7 @@
                 to meet and hangout with people who have similar interests.Whatever the occassion we have it!
             </P>
             <div class="button">
-                <a href="#" class="btn-left">Get Started</a>
+                <a href="/auth" class="btn-left">Get Started</a>
                 <a href="#" class="btn-right">Learn More</a>
             </div>
         </div>
