--- a/client/home/home.html
+++ b/client/home/home.html
@@ -10,7 +10,8 @@
 <body>
     <nav class="header">
         <h1 class='logo-text'>Hafla</h1>
-        <div>
+        <div class="user-card">
+
         </div>
     </nav>
     <main>
