--- a/client/home/home.html
+++ b/client/home/home.html
@@ -9,9 +9,11 @@
 </head>
 <body>
     <nav class="header">
+       
         <h1 class='logo-text'>Hafla</h1>
-        <div class="user-card">
-
+        <button class="logout" id="logout">Logout</button>
+        <div class="user-card" id="user-card">
+           
         </div>
     </nav>
     <main>
